Fix class names and new URL deprecation